--- a/MavenBuildJenkins/pom.xml
+++ b/MavenBuildJenkins/pom.xml
@@ -3,4 +3,21 @@
   <groupId>MavenBuildJenkins</groupId>
   <artifactId>MavenBuildJenkins</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+ <properties>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+</properties>
+	
+<dependencies>
+	<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.8.1</version>
+    <scope>test</scope>
+</dependency>
+	
+</dependencies>
+
+
 </project>
+
